src/test/ui/mismatched_types/closure-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^ one type is more general than the other
   |
   = note: expected type `for<'r> std::ops::Fn<(&'r (),)>`
              found type `std::ops::Fn<(&(),)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
